Merged UserDTO with User model, additional validation in PlaylistInfo and BattleDTO, fixed bug in LibraryAnalysisService getMapAnalysis method