@@ -3,10 +3,10 @@ package com.laa66.statlyapp.service.impl;
 import com.laa66.statlyapp.DTO.*;
 
 import com.laa66.statlyapp.entity.BetaUser;
+import com.laa66.statlyapp.entity.User;
 import com.laa66.statlyapp.exception.UserNotFoundException;
 import com.laa66.statlyapp.mapper.EntityMapper;
 import com.laa66.statlyapp.model.Image;
-import com.laa66.statlyapp.model.User;
 import com.laa66.statlyapp.repository.*;
 import com.laa66.statlyapp.service.UserService;
 import lombok.RequiredArgsConstructor;
@@ -16,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Transactional
@@ -33,62 +32,62 @@ public class UserServiceImpl implements UserService {
                 .findFirst()
                 .map(Image::getUrl)
                 .orElse("none");
-        return reactUrl + "/statly-frontend/#/callback?name=" + StringUtils.stripAccents(userDTO.getDisplayName()) + "&url=" + (imageUrl.equals("none") ? "./account.png"  : imageUrl);
+        return reactUrl + "/statly-frontend/#/callback?name=" + StringUtils.stripAccents(userDTO.getName()) + "&url=" + (imageUrl.equals("none") ? "./account.png"  : imageUrl);
     }
 
     @Override
-    public User findUserByEmail(String email) {
+    public UserDTO findUserByEmail(String email) {
         return userRepository.findByEmail(email)
                 .map(EntityMapper::toUserDTO)
                 .orElse(null);
     }
 
     @Override
-    public User findUserById(long userId) {
+    public UserDTO findUserById(long userId) {
         return userRepository.findById(userId)
                 .map(EntityMapper::toUserDTO)
                 .orElseThrow(() -> new UserNotFoundException("User not found"));
     }
 
     @Override
-    public List<User> findAllMatchingUsers(String username) {
+    public List<UserDTO> findAllMatchingUsers(String username) {
         return userRepository.findAllMatchingUsers(username).stream()
                 .map(EntityMapper::toUserDTO)
                 .toList();
     }
 
     @Override
-    public List<User> findAllUsersOrderByPoints() {
+    public List<UserDTO> findAllUsersOrderByPoints() {
         return userRepository.findAllUsersOrderByPoints().stream()
                 .map(EntityMapper::toUserDTO)
                 .toList();
     }
 
     @Override
-    public User saveUser(com.laa66.statlyapp.entity.User user) {
-        com.laa66.statlyapp.entity.User savedUser = userRepository.save(user);
+    public UserDTO saveUser(User user) {
+        User savedUser = userRepository.save(user);
         return EntityMapper.toUserDTO(savedUser);
     }
 
     @Override
     public void deleteUser(long id) {
-        userRepository.findById(id).ifPresentOrElse(item -> userRepository.deleteById(item.getId()),
+        userRepository.findById(id).ifPresentOrElse(user -> userRepository.deleteById(user.getId()),
                         () -> {
                     throw new UserNotFoundException("User not found");
                 });
     }
 
     @Override
-    public void saveBetaUser(BetaUserDTO dto) {
-        BetaUser betaUser = new BetaUser(0, dto.getFullName(), dto.getEmail(), LocalDateTime.now());
+    public void saveBetaUser(BetaUserDTO betaUserDTO) {
+        BetaUser betaUser = new BetaUser(0, betaUserDTO.getFullName(), betaUserDTO.getEmail(), LocalDateTime.now());
         betaUserRepository.save(betaUser);
     }
 
     @Override
     public List<BetaUserDTO> findAllBetaUsers() {
         return ((Collection<BetaUser>) betaUserRepository.findAll()).stream()
-                .map(item -> new BetaUserDTO(item.getFullName(), item.getEmail(), item.getDate().toString()))
-                .collect(Collectors.toList());
+                .map(user -> new BetaUserDTO(user.getFullName(), user.getEmail(), user.getDate().toString()))
+                .toList();
     }
 
     @Override
